[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "multiLib"
version = "0.0.1"
authors = [
  { name="Snorre Klev", email="eksplosivt@gmail.com" },
]
description = "A small qol package"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Bug Tracker" = "https://github.com/SnorreKlev/multiLib/issues"
